--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^5.16.0 || ^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0",
+    "prettier": "1.19.1",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
+  },
+  "prettier": {
+    "tabWidth": 2
   }
 }
